--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Docker Login
-        run: docker login -u ${{ secrets.<DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
+        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build
         run: |
           docker build -t ${{ secrets.DOCKER_USER }}/cochecicd:${{ github.sha }} .
